--- a/app/views/Contacto/index.html
+++ b/app/views/Contacto/index.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'Mar Peruano Restaurante' /}
 #{set 'moreScripts'}
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAx4oPXEulbMlmvs9xVnxaFp02ETYGVes"></script>
 #{/set}
 
 <div class="banner" id="banner-contacto">
