--- a/app/views/Acerca/index.html
+++ b/app/views/Acerca/index.html
@@ -7,20 +7,17 @@
 		<div class="titulo">
 			Acerca
 		</div>
-		<div class="leyenda">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-		</div>
 	</div>
 </div>
 
 <div class="post1">
 	<div class="container">
-		<div class="texto1">Nuestra Historia</div>
-		<div class="texto2">Desde 1990</div>
+		<div class="texto1">Nuestra</div>
+		<div class="texto2">Historia</div>
 		<div class="divider"></div>
 		<div class="contenido">
 			<div class="texto-contenido no-margin">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				A  finales del año 2007, luego de una estadía de su fundadora por el Perú, se gestó la idea de comenzar un restaurante de comida peruana en el sector de la Alameda en la ciudad de Cali, enfocado en la comida de mar; así dando pues día a día productos de excelente calidad y siendo uno de los restaurantes en Cali mejor posicionados en su especialidad.
 			</div>
 		</div>
 	</div>
@@ -35,54 +32,54 @@
 		<div class="divider"></div>
 		<div class="contenido">
 			<div class="texto-contenido">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Ofrecer conceptos únicos e integrales de alimentos, bebidas y entretenimiento.
 			</div>
 			<div class="row">
 				<div class="col-sm-6 hidden-xs">
 					<div class="textbox tb-left tb-top">
 						<div class="head">
 							<div class="numero uno"></div>
-							<div class="titulo t1">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t1">Buen Servicio</div>
 						</div>
-						<div class="content c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c1">Somos una empresa enfocada al buen servicio y el trato integral hacia nuestros comensales.</div>
 					</div>
 					<div class="textbox tb-left">
 						<div class="head">
 							<div class="numero tres"></div>
-							<div class="titulo t1">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t1">Productos Importados</div>
 						</div>
-						<div class="content c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c1">Con productos importados directamente del Perú, Mar Peruano ofrece una experiencia inigualable.</div>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="textbox tb-left tb-top visible-xs">
 						<div class="head">
 							<div class="numero uno"></div>
-							<div class="titulo t1">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t1">Buen Servicio</div>
 						</div>
-						<div class="content c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c1">Somos una empresa enfocada al buen servicio y el trato integral hacia nuestros comensales.</div>
 					</div>
 					<div class="emptybox hidden-xs"></div>
 					<div class="textbox tb-right tb-top">
 						<div class="head">
 							<div class="numero dos"></div>
-							<div class="titulo t2">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t2">Ubicación</div>
 						</div>
-						<div class="content c2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c2">Ubicados en ambos sectores de la ciudad para mayor comodidad.</div>
 					</div>
 					<div class="textbox tb-left tb-top visible-xs">
 						<div class="head">
 							<div class="numero tres"></div>
-							<div class="titulo t1">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t1">Productos Importados</div>
 						</div>
-						<div class="content c1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c1">Con productos importados directamente del Perú, Mar Peruano ofrece una experiencia inigualable.</div>
 					</div>
 					<div class="textbox tb-right">
 						<div class="head">
 							<div class="numero cuatro"></div>
-							<div class="titulo t2">Lorem ipsum dolor sit amet</div>
+							<div class="titulo t2">Ambientación</div>
 						</div>
-						<div class="content c2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="content c2">Un ambiente envolvente que te hará sentir como si estuviera en Perú.</div>
 					</div>
 				</div>
 			</div>
