--- a/app/views/Contacto/index.html
+++ b/app/views/Contacto/index.html
@@ -11,7 +11,7 @@
 			CONTACTO
 		</div>
 		<div class="leyenda">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			Planea tu experiencia en Mar Peruano, conoce nuestras diferentes sedes.
 		</div>
 	</div>
 </div>
@@ -37,12 +37,14 @@
 				<div class="col-sm-4">
 					<div class="infobox">
 						<div class="icon"><img src="@{'public/images/ic-horario.svg'}" alt="Horario"></div>
-						<div class="yellowtext">Lunes a Viernes</div>
+						<div class="yellowtext">Lunes a Jueves</div>
 						<div class="graytext">11:00 AM - 8:00 PM</div>
 					</div>
 					<div class="infobox visible-xs">
-						<div class="yellowtext">Sábados, Domingos y Festivos</div>
-						<div class="graytext">10:00 AM - 11:00 PM</div>
+						<div class="yellowtext">Viernes y Sábado</div>
+						<div class="graytext">11:00 AM - 9:30 PM</div>
+						<div class="yellowtext">Domingos y Festivos</div>
+						<div class="graytext">11:00 AM - 5:00 PM</div>
 					</div>
 				</div>
 				<div class="col-sm-4">
@@ -66,8 +68,10 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="infobox">
-						<div class="yellowtext">Sábados, Domingos y Festivos</div>
-						<div class="graytext">10:00 AM - 11:00 PM</div>
+						<div class="yellowtext">Viernes y Sábado</div>
+						<div class="graytext">11:00 AM - 9:30 PM</div>
+						<div class="yellowtext">Domingos y Festivos</div>
+						<div class="graytext">11:00 AM - 5:00 PM</div>
 					</div>
 				</div>
 				<div class="col-sm-4">
@@ -90,7 +94,7 @@
 		<div class="divider"></div>
 		<div class="contenido">
 			<div class="texto-contenido">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Comenta tus experiencias con nosotros, permítenos conocer tu punto de vista.
 			</div>
 			<div class="contacto">
 				<div class="inputs row">
