--- a/app/views/Menu/index.html
+++ b/app/views/Menu/index.html
@@ -56,9 +56,7 @@
 		<div class="texto2">Menú</div>
 		<div class="divider"></div>
 		<div class="contenido">
-			<div class="texto-contenido">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-			</div>
+			<div class="texto-contenido"></div>
 			<div class="menu">
 				<div class="row">
 					<div class="col-sm-6">
