Cambios en las imagenes

--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -739,6 +739,30 @@ body
 			background-repeat no-repeat
 			background-position center
 			
+		#carousel-rest-1
+			background url('../images/rest1.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+		
+		#carousel-rest-2
+			background url('../images/rest2.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
+		#carousel-rest-3
+			background url('../images/rest3.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+		
+		#carousel-rest-4
+			background url('../images/rest4.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
 		.carousel-image
 			height 100%
 			width 100%
