--- a/app/views/Restaurante/index.html
+++ b/app/views/Restaurante/index.html
@@ -105,16 +105,25 @@
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
 				</ol>
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<div class="carousel-image" id="carousel-item-1"></div>
+						<div class="carousel-image" id="carousel-rest-1"></div>
 					</div>
 
 					<div class="item">
-						<div class="carousel-image" id="carousel-item-2"></div>
+						<div class="carousel-image" id="carousel-rest-2"></div>
+					</div>
+					<div class="item active">
+						<div class="carousel-image" id="carousel-rest-3"></div>
+					</div>
+
+					<div class="item">
+						<div class="carousel-image" id="carousel-rest-4"></div>
 					</div>
 				</div>
 
