--- a/app/views/Eventos/index.html
+++ b/app/views/Eventos/index.html
@@ -4,11 +4,11 @@
 <div class="banner" id="banner-eventos">
 	<div class="overlay"></div>
 	<div class="container">
+		<div class="pretitulo">
+			Próximamente
+		</div>
 		<div class="titulo">
 			Eventos
-		</div>
-		<div class="leyenda">
-			Próximamente
 		</div>
 	</div>
 </div>
