--- a/app/views/Restaurante/index.html
+++ b/app/views/Restaurante/index.html
@@ -7,9 +7,6 @@
 		<div class="titulo">
 			Restaurante
 		</div>
-		<div class="leyenda">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-		</div>
 	</div>
 </div>
 
@@ -22,7 +19,6 @@
 				<div class="divider"></div>
 				<div class="contenido">
 					<div class="texto-contenido no-margin">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					</div>
 				</div>
 			</div>
@@ -35,7 +31,6 @@
 				<div class="imagen imagen2 hidden-xs"></div>
 				<div class="contenido visible-xs">
 					<div class="texto-contenido">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					</div>
 					<div class="infobox">
 						<div class="icon"><img src="@{'public/images/ic-ubicacion.svg'}" alt="Ubicacion"></div>
@@ -57,7 +52,6 @@
 				<div class="imagen imagen2 visible-xs"></div>
 				<div class="contenido hidden-xs">
 					<div class="texto-contenido">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					</div>
 					<div class="infobox">
 						<div class="icon"><img src="@{'public/images/ic-ubicacion.svg'}" alt="Ubicacion"></div>
@@ -114,11 +108,10 @@
 					<div class="item active">
 						<div class="carousel-image" id="carousel-rest-1"></div>
 					</div>
-
 					<div class="item">
 						<div class="carousel-image" id="carousel-rest-2"></div>
 					</div>
-					<div class="item active">
+					<div class="item">
 						<div class="carousel-image" id="carousel-rest-3"></div>
 					</div>
 
