Imagenes de platos

--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -731,18 +731,6 @@ body
 			.carousel-inner
 				.item
 					height 300px
-				
-		#carousel-item-1
-			background url('../images/resturante-interior-mesas.jpg')
-			background-size cover
-			background-repeat no-repeat
-			background-position center
-		
-		#carousel-item-2
-			background url('../images/resturante-interior-barra.jpg')
-			background-size cover
-			background-repeat no-repeat
-			background-position center
 			
 		#carousel-rest-1
 			background url('../images/rest1.jpg')
@@ -764,6 +752,48 @@ body
 		
 		#carousel-rest-4
 			background url('../images/rest4.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
+		#carousel-plato-1
+			background url('../images/plato1.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+		
+		#carousel-plato-2
+			background url('../images/plato2.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
+		#carousel-plato-3
+			background url('../images/plato3.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+		
+		#carousel-plato-4
+			background url('../images/plato4.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
+		#carousel-plato-5
+			background url('../images/plato5.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			
+		#carousel-plato-6
+			background url('../images/plato6.jpg')
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+		
+		#carousel-plato-7
+			background url('../images/plato7.jpg')
 			background-size cover
 			background-repeat no-repeat
 			background-position center
