--- a/app/views/Menu/index.html
+++ b/app/views/Menu/index.html
@@ -23,16 +23,35 @@
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
+					<li data-target="#myCarousel" data-slide-to="6"></li>
+					<li data-target="#myCarousel" data-slide-to="7"></li>
 				</ol>
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<div class="carousel-image" id="carousel-item-1"></div>
+						<div class="carousel-image" id="carousel-plato-1"></div>
 					</div>
-
 					<div class="item">
-						<div class="carousel-image" id="carousel-item-2"></div>
+						<div class="carousel-image" id="carousel-plato-2"></div>
+					</div>
+					<div class="item">
+						<div class="carousel-image" id="carousel-plato-3"></div>
+					</div>
+					<div class="item">
+						<div class="carousel-image" id="carousel-plato-4"></div>
+					</div>
+					<div class="item">
+						<div class="carousel-image" id="carousel-plato-5"></div>
+					</div>
+					<div class="item">
+						<div class="carousel-image" id="carousel-plato-6"></div>
+					</div>
+					<div class="item">
+						<div class="carousel-image" id="carousel-plato-7"></div>
 					</div>
 				</div>
 
