--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,9 +6,12 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap.min.css'}">
 	<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+	<link rel="stylesheet" href="@{'public/stylesheets/bootstrap-datepicker.min.css'}" />
 	<link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
 	<script src="@{'/public/javascripts/jquery-1.11.3.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 	<script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+	<script src="@{'/public/javascripts/bootstrap-datepicker.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+	<script src="@{'/public/javascripts/bootstrap-datepicker.es.min.js'}"  type="text/javascript" charset="${_response_encoding}"></script>
 	#{get 'moreScripts' /}
 </head>
 <body>
