--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -801,6 +801,23 @@ body
 		.carousel-image
 			height 100%
 			width 100%
+			
+	#dialogo-exito
+		.modal-content
+			.modal-header
+				color amarillo
+				font-family AliensAndCows
+				text-align center
+				text-transform uppercase
+				
+				h4
+					font-size 25px
+					
+			.modal-body
+				text-align center
+				
+			.boton
+				max-width 150px
 					
 @font-face {
 	font-family 'RobotoSlab'
