--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -26,7 +26,7 @@
 	$('#dialogo-exito').modal('show');
 </script>
 #{/if}
-#{else}
+#{elseif exito ='no'}
 <div class="modal fade" tabindex="-1" role="dialog" id="dialogo-exito">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -47,7 +47,7 @@
 <script>
 	$('#dialogo-exito').modal('show');
 </script>
-#{/else}
+#{/elseif}
 
 <div class="banner" id="banner-inicio">
 	<div class="overlay"></div>
