--- a/app/views/Menu/index.html
+++ b/app/views/Menu/index.html
@@ -75,6 +75,7 @@
 		<div class="texto2">Menú</div>
 		<div class="divider"></div>
 		<div class="contenido">
+			<a href="CartaPDF">VER CARTA EN PDF</a>
 			<div class="texto-contenido"></div>
 			<div class="menu">
 				<div class="row">
