--- a/app/views/Menu/index.html
+++ b/app/views/Menu/index.html
@@ -1,4 +1,4 @@
-#{extends 'main.html' /}
+﻿#{extends 'main.html' /}
 #{set title:'Mar Peruano Restaurante' /}
 
 
@@ -92,7 +92,7 @@
 						<div class="item-menu">
 							<div class="header">
 								<div class="nombre">Tiradito de Pulpo</div>
-								<div class="precio">$32.000</div>
+								<div class="precio">$60.000</div>
 							</div>
 							<div class="descripcion">Láminas de pulpo marinadas al limón y bañadas con ajíes amarillos y crema de rocoto.</div>
 						</div>
